--- a/MlKit_pose_cameraX_basic-master/app/src/main/res/layout/activity_main.xml
+++ b/MlKit_pose_cameraX_basic-master/app/src/main/res/layout/activity_main.xml
@@ -28,13 +28,15 @@
         android:background="#000"
         android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/camerachage"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:text="Switch Camera"
-            android:layout_gravity="center"/>
+        <ToggleButton
+            android:id="@+id/facing_switch"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_gravity="center_vertical"
+            android:background="@drawable/toggle_style"
+            android:checked="false"
+            android:textOff=""
+            android:textOn=""/>
 
         <Spinner
             android:id="@+id/spinner"
